invest-app/main/default/objects/Investment__c/fields/ActualRoiPercentage__c.field-meta.xml
<CustomField>
    <fullName>ActualRoiPercentage__c</fullName>
    <description>Actually earned, cannot be lost anymore</description>
    <formula>IF(InvestedAmount__c == 0, 0, (ABS(EarnedAmount__c) /  InvestedAmount__c)) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Realised ROI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>