invest-app/main/default/objects/Investment__c/fields/Coefficient__c.field-meta.xml
<CustomField>
    <fullName>Coefficient__c</fullName>
    <formula>InvestedAmount__c / InvestmentPlan__r.TotalInvestedAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coefficient</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>