invest-app/main/default/objects/Investment__c/fields/CurrentBalance__c.field-meta.xml
<CustomField>
    <fullName>CurrentBalance__c</fullName>
    <description>Balance of the Investment (including any unrealised profit or loss) as of the latest balance udpate</description>
    <label>Current Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>