invest-app/main/default/objects/Investment__c/fields/CurrentlyInvestedAmount__c.field-meta.xml
<CustomField>
    <fullName>CurrentlyInvestedAmount__c</fullName>
    <description>Money currently invested, i.e. all deposited less all withdrawn</description>
    <label>Currently Invested Amount</label>
    <summarizedField>InvestmentUpdate__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>InvestmentUpdate__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Deposit, Withdrawal</value>
    </summaryFilterItems>
    <summaryForeignKey>InvestmentUpdate__c.Investment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>