invest-app/main/default/objects/Investment__c/fields/CurrentRoiAmount__c.field-meta.xml
<CustomField>
    <fullName>CurrentRoiAmount__c</fullName>
    <formula>CurrentRoiPercentage__c *  InvestedAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Gain</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>