invest-app/main/default/objects/Investment__c/fields/CurrentRoiPercentage__c.field-meta.xml
<CustomField>
    <fullName>CurrentRoiPercentage__c</fullName>
    <description>Investment&apos;s potential gain</description>
    <formula>IF(InvestedAmount__c == 0, 0, ((CurrentBalance__c + ABS(EarnedAmount__c)) / InvestedAmount__c )) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unrealised ROI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>