invest-app/main/default/objects/Investment__c/fields/EarnedAmount__c.field-meta.xml
<CustomField>
    <fullName>EarnedAmount__c</fullName>
    <description>All the money withdrawn from the Investment</description>
    <label>Earned Amount</label>
    <summarizedField>InvestmentUpdate__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>InvestmentUpdate__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Withdrawal</value>
    </summaryFilterItems>
    <summaryForeignKey>InvestmentUpdate__c.Investment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>