invest-app/main/default/objects/Investment__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Expected or actual date the investment is closed (all money withdrawn).</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>