invest-app/main/default/objects/Investment__c/fields/InvestedAmount__c.field-meta.xml
<CustomField>
    <fullName>InvestedAmount__c</fullName>
    <description>All deposits and withdrawals aggregated. Currently invested amount</description>
    <label>Invested Amount</label>
    <summarizedField>InvestmentUpdate__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>InvestmentUpdate__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Deposit</value>
    </summaryFilterItems>
    <summaryForeignKey>InvestmentUpdate__c.Investment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>