invest-app/main/default/objects/Investment__c/fields/InvestmentPlan__c.field-meta.xml
<CustomField>
    <fullName>InvestmentPlan__c</fullName>
    <label>Investment Plan</label>
    <referenceTo>InvestmentPlan__c</referenceTo>
    <relationshipLabel>Investments</relationshipLabel>
    <relationshipName>Investments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>