invest-app/main/default/objects/Investment__c/fields/LatestBalanceUpdate__c.field-meta.xml
<CustomField>
    <fullName>LatestBalanceUpdate__c</fullName>
    <description>The Date of the most recent Balance Update applied. Filled in automatically. Used to choose the current balance value for the Investment.</description>
    <label>Latest Balance Update</label>
    <summarizedField>InvestmentUpdate__c.DateOfUpdate__c</summarizedField>
    <summaryFilterItems>
        <field>InvestmentUpdate__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Balance Update</value>
    </summaryFilterItems>
    <summaryForeignKey>InvestmentUpdate__c.Investment__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>