invest-app/main/default/objects/Investment__c/fields/TargetRate__c.field-meta.xml
<CustomField>
    <fullName>TargetRate__c</fullName>
    <description>The expected or target percentage rate. Either the declared rate of the product/platform or the set target to beat for manual investments. Will be used to indicate investment status.</description>
    <label>Expected Return</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>