invest-app/main/default/objects/Investment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>InvestedAmount__c</columns>
    <columns>CurrentlyInvestedAmount__c</columns>
    <columns>CurrentBalance__c</columns>
    <columns>CurrentRoiPercentage__c</columns>
    <columns>ActualRoiPercentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>